# ipc-bench

./: .gitignore
source/: CMakeLists.txt
source/eventfd/: eventfd-bi.c  eventfd-uni.c
source/pipe/: pipe.c
source/signal/: server.c
source/taic/: CMakeLists.txt  taic-bi-uint.c  taic-bi.c  taic-uni-uint.c  taic-uni.c  taic.h  uintr.h
source/uintrfd/: CMakeLists.txt  uintr.h  uintrfd-bi.c  uintrfd-uni.c  uipi-sample.c
